Bug 1466715 - Remove unimplemented -moz-appearance:window from XUL document elements on Windows and align on 'dialog' elsewhere. r=dao,emilio
Before this commit, we use `-moz-appearance: dialog;`[1] (mapping to NS_THEME_DIALOG) in global.css
on macOS for XUL root elements while on Windows[2] and Linux[3] we use `-moz-appearance: window;`
(mapping to NS_THEME_WINDOW).

From what I can tell NS_THEME_WINDOW behaves the same as NS_THEME_DIALOG on Linux[4], NS_THEME_WINDOW
doesn't do anything useful on macOS[5], and neither are implemented on Windows (bug 119737).

[1] https://dxr.mozilla.org/mozilla-central/rev/0ee6b755ab2ee6d2ab79b17cc97bd4e83424cbfc/toolkit/themes/osx/global/global.css#35
[2] https://dxr.mozilla.org/mozilla-central/rev/0ee6b755ab2ee6d2ab79b17cc97bd4e83424cbfc/toolkit/themes/windows/global/global.css#41
[3] https://dxr.mozilla.org/mozilla-central/rev/0ee6b755ab2ee6d2ab79b17cc97bd4e83424cbfc/toolkit/themes/linux/global/global.css#45
[4] All references to NS_THEME_WINDOW and NS_THEME_DIALOG seem to handle the other in the same way.
[5] https://dxr.mozilla.org/mozilla-central/search?q=regexp%3ANS_THEME_WINDOW%5Cb+path%3Acocoa&redirect=false

MozReview-Commit-ID: 6TGzDnMEY2y

--- a/toolkit/themes/linux/global/global.css
+++ b/toolkit/themes/linux/global/global.css
@@ -42,7 +42,7 @@ window,
 page,
 dialog,
 wizard {
-  -moz-appearance: window;
+  -moz-appearance: dialog;
   background-color: -moz-Dialog;
   color: -moz-DialogText;
   font: message-box;
